@@ -1,5 +1,6 @@
 package br.com.liviasilvasantos.s3.service;
 
+import br.com.liviasilvasantos.s3.configuration.AwsConfigProperties;
 import br.com.liviasilvasantos.exception.FileListenerException;
 import com.amazonaws.services.s3.AmazonS3;
 import io.awspring.cloud.core.io.s3.PathMatchingSimpleStorageResourcePatternResolver;
@@ -13,8 +14,8 @@ import org.springframework.core.io.WritableResource;
 import org.springframework.core.io.support.ResourcePatternResolver;
 import org.springframework.stereotype.Service;
 
-import java.io.InputStream;
-import java.io.OutputStream;
+import java.io.*;
+import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
@@ -26,23 +27,23 @@ public class S3FileService {
 
     @Value("helloworld")
     private String directory;
-
     @Autowired
     private ResourceLoader resourceLoader;
 
     private ResourcePatternResolver resourcePatternResolver;
 
     @Autowired
-    public void setupResolver(final ApplicationContext applicationContext, final AmazonS3 amazonS3){
-        this.resourcePatternResolver = new PathMatchingSimpleStorageResourcePatternResolver(amazonS3, applicationContext);
+    public void setupResolver(ApplicationContext applicationContext, AmazonS3 amazonS3) {
+        this.resourcePatternResolver = new PathMatchingSimpleStorageResourcePatternResolver(amazonS3,
+                applicationContext);
     }
 
-    public boolean isFileExists(final String file){
+    public boolean isFileExists(String file) {
         try {
-            final Resource resource = this.resourceLoader.getResource("s3://%s/%s".formatted(this.directory, file));
-            return resource.exists();
-        } catch (final Exception ex) {
-            log.error(ex.getMessage(), ex);
+            Resource resource = this.resourceLoader
+                    .getResource(String.format("s3://%s/%s", directory, file));
+            return resource.contentLength() > 0;
+        } catch (Exception ex) {
             return false;
         }
     }
@@ -61,12 +62,8 @@ public class S3FileService {
         return Arrays.asList(resources).stream().sorted(Comparator.comparing(Resource::getFilename)).collect(Collectors.toList());
     }
 
-
     public void saveFile(InputStream from, String to) throws FileListenerException {
-        final String s3Path = String.format("s3://%s/%s", directory, to);
-        log.info("s3 path = " + s3Path);
-
-        Resource resource = this.resourceLoader.getResource(s3Path);
+        Resource resource = this.resourceLoader.getResource(String.format("s3://%s/%s", directory, to));
         WritableResource writableResource = (WritableResource) resource;
 
         try (OutputStream outputStream = writableResource.getOutputStream()) {
@@ -74,6 +71,18 @@ public class S3FileService {
         } catch (Exception ex) {
             log.error(ex.getMessage(), ex);
             throw new FileListenerException(ex.getMessage(), ex);
+        }
+    }
+
+    public String contentFile(String file) {
+        try {
+            Resource resource = resourceLoader.getResource(String.format("s3://%s/%s", directory, file));
+            return new BufferedReader(
+                    new InputStreamReader(resource.getInputStream(), StandardCharsets.ISO_8859_1))
+                    .lines()
+                    .collect(Collectors.joining("\n"));
+        } catch (Exception ex) {
+            return null;
         }
     }
 }
